# flask-mongodb

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yaml  mkdocs.yml  mkdocs_requirements.txt  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  setup.py
.github/workflows/: gen-docs.yaml
0.1/: 404.html  index.html
0.1/changelog/: index.html
0.1/collections/: index.html
0.1/mongo/: index.html
0.1/search/: search_index.json
0.2/: index.html
0.2/api/: index.html
0.2/changelog/: index.html
0.2/cli/: index.html
0.2/search/: search_index.json
0.3/: 404.html  index.html  search.html
0.3/api/: index.html
0.3/changelog/: index.html
0.3/cli/: index.html
0.3/collections/: index.html
0.3/forms/: index.html
0.3/mongo/: index.html
0.3/search/: search_index.json
api/: index.html
changelog/: index.html
cli/: index.html
collections/: index.html
docs/: api.md  changelog.md  cli.md  collections.md  forms.md  index.md  mongo.md  serializers.md
docs/stylesheet/: extra.css
flask_mongodb/: __init__.py  about.py  globals.py  views.py
flask_mongodb/cli/: cli.py  db_shifts.py  utils.py
flask_mongodb/core/: exceptions.py  mixins.py  mongo.py  wrappers.py
flask_mongodb/forms/: collection.py  fields.py  meta.py
flask_mongodb/models/: __init__.py  collection.py  document_set.py  fields.py  manager.py
flask_mongodb/models/shitfs/: __init__.py  hisotry.py  history.py  shift.py
flask_mongodb/serializers/: __init__.py  exceptions.py  fields.py  meta.py  serializers.py  validators.py
flask_mongodb/utils/: version.py
mongo/: index.html
requirements/: requirements.txt  requirements_dev.txt
search/: search_index.json
serializers/: index.html
stylesheet/: extra.css
tests/: fixtures.py  test_app.py  test_cli.py  test_fields.py  test_model_forms.py  test_models.py  test_reverse_relations.py  utils.py
tests/model_for_tests/cli/shift/: models.py  shift.py
tests/model_for_tests/core/: models.py
tests/model_for_tests/reference/: models.py
tests/test_references/: base_setup.py  test_reference.py  test_reverse_relations.py
tests/test_serializers/: test_model_serializers.py  test_simple_serializer.py
