[project]
name = 'Flask-MongoDB'
version = "0.3.0-dev1"
description = 'A Flask extension for connecting a MongoDB instance'
readme = "README.md"
authors = [{ name = "Juan Vazquez", email = "juanmapr913@gmail.com" }]
maintainers = [{ name = "Juan Vazquez", email = "juanmapr913@gmail.com" }]
license = {file = 'LICENSE'}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Environment :: Web Environment',
    'Framework :: Flask',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Database'
]
requires-python = '>=3.9'
dependencies = [
    "click~=8.1.7",
    "flask~=2.3.3",
    "pymongo==4.3.2",
    "wtforms~=3.0.1",
    "email-validator~=1.1.3",
    "Werkzeug~=2.3.8",
    "flask-Login==0.6.3"
]

[project.scripts]
flask-mongodb = 'flask_mongodb.cli.cli:main'

[project.urls]
Homepage = 'https://github.com/juanmanuel96/flask-mongodb'
Issues = 'https://github.com/juanmanuel96/flask-mongodb/issues'
Documentation = 'https://juanmanuel96.github.io/flask-mongodb/latest/'

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {"include" = ["flask_mongodb*"], "exclude" = ['tests', 'tests.*']}