[project]
name = 'Flask-MongoDB'
description = 'A Flask extension for connecting a MongoDB instance'
readme = "README.md"
authors = [{ name = "Juan Vazquez", email = "juanmapr913@gmail.com" }]
maintainers = [{ name = "Juan Vazquez", email = "juanmapr913@gmail.com" }]
license = {file = 'LICENSE'}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Environment :: Web Environment',
    'Framework :: Flask',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Database'
]
requires-python = '>=3.9'
dependencies = [
    "click<9",
    "flask<3",
    "pymongo<5",
    "wtforms<4",
    "email-validator"
]
dynamic = [
    "version"
]

[project.scripts]
flask-mongodb = 'flask_mongodb.cli.cli:main'

[project.urls]
Homepage = 'https://github.com/juanmanuel96/flask-mongodb'
Issues = 'https://github.com/juanmanuel96/flask-mongodb/issues'
Documentation = 'https://juanmanuel96.github.io/flask-mongodb/latest/'

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {"include" = ["flask_mongodb*"], "exclude" = ['tests', 'tests.*']}

[tool.setuptools.dynamic]
version = {attr = "flask_mongodb.utils.version.__version__"}